--- a/package.json
+++ b/package.json
@@ -2,12 +2,23 @@
   "name": "calendar_appointment_app",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://github.com/Sankara98/Appointment-React-Application",
   "dependencies": {
+    "@date-io/date-fns": "^1.3.8",
+    "@material-ui/core": "^4.1.3",
+    "@material-ui/pickers": "^3.1.2",
+    "date-fns": "^2.0.0-beta.2",
+    "gh-pages": "^2.0.1",
+    "moment": "^2.24.0",
     "react": "^16.8.6",
+    "react-datetime": "^2.16.3",
     "react-dom": "^16.8.6",
-    "react-scripts": "3.0.1"
+    "react-scripts": "3.0.1",
+    "shortid": "^2.2.14"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
