--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "shortid": "^2.2.14"
   },
   "scripts": {
-    "predeploy": "npm run build",
+    "predeploy": "yarn run build",
     "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
