--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "calendar_appointment_app",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://github.com/Sankara98/Appointment-React-Application",
+  "homepage": "./",
   "dependencies": {
     "@date-io/date-fns": "^1.3.8",
     "@material-ui/core": "^4.1.3",
